Fixes and improvements

--- a/ror-configurator.ini
+++ b/ror-configurator.ini
@@ -238,13 +238,9 @@ widget=PingingEnable_CheckButton
 group=network
 widget=Nickname_Entry
 
-[server-name]
+[server-host]
 group=network
-widget=ServerName_Entry
-
-[server-port]
-group=network
-widget=ServerPort_Entry
+widget=ServerHost_Entry
 
 [server-pass]
 group=network
